adding minor improvements

--- a/popup.html
+++ b/popup.html
@@ -3,14 +3,21 @@
 <head>
   <title>Shop buddy</title>
   <link rel="stylesheet" href="assets/css/app.css">
-  <script src="js/jquery.min.js"></script>
-  <script src="js/underscore.min.js"></script>
+  <script src="lib/jquery.min.js"></script>
+  <script src="lib/underscore-min.js"></script>
 </head>
 <body>
-  <header>
-    
+	<header>
+   <h1>Shoppers</h1>
   </header>
+  <div class="login">
+  	<a href=""><img src="assets/img/fb.png" alt="login FB" class="src"></a>
+  </div>
+  <div id="twitter-login">
+    <button>Log-in to Twitter</button>
+  </div>
+	
 </body>
-<script src="assets/js/"></script>
-<script src="assets/js/"></script>
+<script src="assets/js/popup.js"></script>
+<script src="assets/js/recommend.js"></script>
 </html>
