add some changes

--- a/popup.html
+++ b/popup.html
@@ -11,7 +11,7 @@
    <h1>Shoppers</h1>
   </header>
   <div class="login">
-  	<a href=""><img src="assets/img/fb.png" alt="login FB" class="src"></a>
+  	<a  target='_blank' href="https://www.facebook.com/dialog/oauth?client_id=590299534315777&response_type=token&scope=user_likes,friends_likes,friends_interests&redirect_uri=http://shopbuddy.github.io/"><img src="assets/img/fb.png" alt="login FB" class="src"></a>
   </div>
   <div id="twitter-login">
     <button>Log-in to Twitter</button>
